--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-transition-group": "^2.2.1",
-    "reactstrap": "^4.8.0"
+    "reactstrap": "^4.8.0",
+    "screenfull": "^3.3.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.14"
